// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoDataCardComponent props button 1`] = `
<EuiCard
  css={
    Object {
      "marginInline": "auto",
      "maxWidth": 400,
    }
  }
  description="Use Elastic Agent for a simple, unified way to collect data from your machines."
  footer={
    <EuiButton
      data-test-subj="noDataDefaultFooterAction"
      fill={true}
    >
      Button
    </EuiButton>
  }
  image={<Image />}
  isDisabled={false}
  paddingSize="l"
  title={
    <EuiScreenReaderOnly>
      <span>
        Add Elastic Agent
      </span>
    </EuiScreenReaderOnly>
  }
/>
`;

exports[`NoDataCardComponent props href 1`] = `
<EuiCard
  css={
    Object {
      "marginInline": "auto",
      "maxWidth": 400,
    }
  }
  description="Use Elastic Agent for a simple, unified way to collect data from your machines."
  footer={
    <EuiButton
      data-test-subj="noDataDefaultFooterAction"
      fill={true}
      href="some path"
    >
      Add Elastic Agent
    </EuiButton>
  }
  href="some path"
  image={<Image />}
  isDisabled={false}
  paddingSize="l"
  title={
    <EuiScreenReaderOnly>
      <span>
        Add Elastic Agent
      </span>
    </EuiScreenReaderOnly>
  }
/>
`;

exports[`NoDataCardComponent renders 1`] = `
<EuiCard
  css={
    Object {
      "marginInline": "auto",
      "maxWidth": 400,
    }
  }
  description="Use Elastic Agent for a simple, unified way to collect data from your machines."
  footer={
    <EuiButton
      data-test-subj="noDataDefaultFooterAction"
      fill={true}
    >
      Add Elastic Agent
    </EuiButton>
  }
  image={<Image />}
  isDisabled={false}
  paddingSize="l"
  title={
    <EuiScreenReaderOnly>
      <span>
        Add Elastic Agent
      </span>
    </EuiScreenReaderOnly>
  }
/>
`;

exports[`NoDataCardComponent renders with canAccessFleet false 1`] = `
<EuiCard
  css={
    Object {
      "marginInline": "auto",
      "maxWidth": 400,
    }
  }
  description={
    <EuiTextColor
      color="default"
    >
      This integration is not yet enabled. Your administrator has the required permissions to turn it on.
    </EuiTextColor>
  }
  image={<Image />}
  isDisabled={true}
  paddingSize="l"
  title={
    <EuiTextColor
      color="default"
    >
      Contact your administrator
    </EuiTextColor>
  }
/>
`;
